--- a/0x00-semantic_html/1-index.html
+++ b/0x00-semantic_html/1-index.html
@@ -12,15 +12,15 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#blogs">Blogs</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="about">About</a></li>
                 <li><a href="contact">contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <article>
-            <h1>EA FC 25 patch notes</h1>
+            <h2>understanding Semantic Html</h2>
             <p>
                 At the beginning of June, EA Sports released EA FC 25 Title Update 15, titled the 'Season Finale Update'. The EA FC 25 update saw lots of gameplay changes made, including passing, heading and PlayStyles, but the title was slightly misleading, with this not being the 'Finale' update players expected.
 
